[package]
name = "tokio-tls-upgrade"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
log = "0.4.22"
rcgen = {version="0.13.1",features=["aws_lc_rs"]}
rustls = "0.23.12"
rustls-pemfile = "2.1.3"
tokio = {version="1.39.2",features=["full","fs","io-util"]}
tokio-rustls = "0.26.0"
