[package]
name = "tokio-tls-upgrade"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Upgrade a TCP stream to a TLS stream using certificates and keys in PEM format."
repository = "https://github.com/starkbamse/tokio-tls-upgrade"
keywords = ["network", "tls", "tcp","stream","tokio"]
categories = ["network-programming"]


[dependencies]
log = "0.4.22"
rcgen = {version="0.13.1",features=["aws_lc_rs"]}
rustls = "0.23.12"
rustls-pemfile = "2.1.3"
tokio = {version="1.39.2",features=["full","fs","io-util"]}
tokio-rustls = "0.26.0"
